--- a/templates/index.html
+++ b/templates/index.html
@@ -380,6 +380,8 @@ nav ul li a.donate-link {
 
 
     </style>
+        <link rel="icon" href="{{ url_for('static', filename='Queen-Of-Peace-Organization.ico') }}">
+
 </head>
 <body>
 
