--- a/templates/index.html
+++ b/templates/index.html
@@ -379,7 +379,7 @@ nav ul li a.donate-link {
 
 /* Add this media query at the end of your existing styles */
 /* Add this media query at the end of your existing styles */
-@media (max-width: 768px) {
+@media (max-width: 100%) {
     body {
         align-items: stretch;
     }
