--- a/templates/index.html
+++ b/templates/index.html
@@ -378,10 +378,10 @@ nav ul li a.donate-link {
 }
 
 /* Add this media query at the end of your existing styles */
-/* Add this media query at the end of your existing styles */
 @media (max-width: 100%) {
     body {
         align-items: stretch;
+        width: 100%;
     }
 
     nav {
