completed with compliance remaining

--- a/templates/index.html
+++ b/templates/index.html
@@ -786,6 +786,26 @@ nav ul li a.donate-link {
                 <p>Angela holds a Bachelor’s degree in Political Science and Anthropology. Her passion is driven by strengthening women empowerment, working with communities to enhance internal governance structures, and promoting inclusive spaces. She is part of the Climate Justice Resilience Fund and an IVLP fellow alumna.</p>
             </div>
         </div>
+
+        <div class="boarditem">
+            <img src="/static/images/blam.jpg" alt="member3">
+            <h2>Beatrice Lempaira</h2>
+            <p>Beatrice Lempaira is the Gender and Social Inclusion Director- Leading NRT gender mainstreaming programs and BeadWORKS, a handicraft business that harnesses the rich beading traditions working with over 1000 pastoralist women from different ethnic groups in northern Kenya.</p>
+            <a id="read-more-link-4" class="read-more-link" onclick="toggleReadMore(4)">Read More</a>
+            <div id="read-more-content-4" class="read-more-content">
+                <p>She has over a decade of experience in community conservation, management, and leadership. She is experienced in working with indigenous/local communities, stakeholders’ relations, complex rangeland landscapes, women, and youth enterprises. She is passionate about inclusive conservation governance and economic empowerment for women and youth.
+                    She holds a bachelor’s degree in economics and Sociology from The University of Nairobi, Kenya and currently perusing Masters in Anthropology from McGill University, Canada.
+                    </p>
+            </div>
+        </div>
+
+        <div class="boarditem">
+            <img src="/static/images/board5.jpg" alt="member3">
+            <h2>Kuresha Bille</h2>
+            <p>Kuresha Bille is a
+                Community  leader , Women Peace Council chairr
+                The chairlady of the women's council</p>
+        </div>
     </div>
     </section>
 
