Foundation to initiative

--- a/templates/index.html
+++ b/templates/index.html
@@ -616,7 +616,7 @@ nav ul li a.donate-link {
             <div class="row">
                 <div class="col-md-12">
                     <h3>Who we Are</h3>
-                    <p>Queen of Peace Foundation is a women-led and women-centered organization committed to the liberation of indigenous women across the vast arid plains of northern Kenya from the extreme social, cultural and economic barriers that exist in the conflict-prone region.</p>
+                    <p>Queen of Peace Initiative is a women-led and women-centered organization committed to the liberation of indigenous women across the vast arid plains of northern Kenya from the extreme social, cultural and economic barriers that exist in the conflict-prone region.</p>
                     <p>The organization is led by a council of women diligently drawn from organized women groups in Isiolo, Marsabit, Samburu and Laikipia counties. Queen of Peace Foundation, thanks to the generous support of our partners, is helping the indigenous women of northern Kenya to understand their rights, reclaim their voice and make valuable and visible contributions towards finding long-lasting solutions to the challenges facing the region, including insecurity, illiteracy, abject poverty, discrimination and gender-based violence.</p>
                     <h3>What we do</h3>
                     <p>We are supporting indigenous women of northern Kenya gain the skills, knowledge and resources they need to be at the forefront of influencing decisions that improve the health and wellbeing of their lives, families and communities</p>
@@ -885,9 +885,9 @@ nav ul li a.donate-link {
             <div class="row">
                 <div class="col-md-12">
                     <h2>Contact Information</h2>
-                    <p>Email: <a href="mailto:info@queenofpeacefoundation.org">info@queenofpeacefoundation.org</a></p>
+                    <p>Email: <a href="mailto:info@thequeenofpeace.org">info@thequeenofpeace.org</a></p>
                     <p>Tel: 0701444161</p>
-                    <p>Alt.Email: <a href="mailto:queenofpeacekenya@gmail.com">queenofpeacekenya@gmail.com</a></p>
+                    <p>Alt.Email: <a href="mailto:queenofpeace.organization@gmail.com">queenofpeace.organization@gmail.com</a></p>
                 </div>
             </div>
         </div>
@@ -895,7 +895,7 @@ nav ul li a.donate-link {
 
 
     <footer>
-        <p>&copy; 2024 Queen Of Peace Foundation. All rights reserved.</p>
+        <p>&copy; 2024 Queen Of Peace Initiative. All rights reserved.</p>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
