added initative in about and removed board member

--- a/templates/index.html
+++ b/templates/index.html
@@ -617,7 +617,7 @@ nav ul li a.donate-link {
                 <div class="col-md-12">
                     <h3>Who we Are</h3>
                     <p>Queen of Peace Initiative is a women-led and women-centered organization committed to the liberation of indigenous women across the vast arid plains of northern Kenya from the extreme social, cultural and economic barriers that exist in the conflict-prone region.</p>
-                    <p>The organization is led by a council of women diligently drawn from organized women groups in Isiolo, Marsabit, Samburu and Laikipia counties. Queen of Peace Foundation, thanks to the generous support of our partners, is helping the indigenous women of northern Kenya to understand their rights, reclaim their voice and make valuable and visible contributions towards finding long-lasting solutions to the challenges facing the region, including insecurity, illiteracy, abject poverty, discrimination and gender-based violence.</p>
+                    <p>The organization is led by a council of women diligently drawn from organized women groups in Isiolo, Marsabit, Samburu and Laikipia counties. Queen of Peace Initiative, thanks to the generous support of our partners, is helping the indigenous women of northern Kenya to understand their rights, reclaim their voice and make valuable and visible contributions towards finding long-lasting solutions to the challenges facing the region, including insecurity, illiteracy, abject poverty, discrimination and gender-based violence.</p>
                     <h3>What we do</h3>
                     <p>We are supporting indigenous women of northern Kenya gain the skills, knowledge and resources they need to be at the forefront of influencing decisions that improve the health and wellbeing of their lives, families and communities</p>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/zcumRz2nthQ?si=GXfbR7sDLOAJEfSz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -777,15 +777,6 @@ nav ul li a.donate-link {
             </div>
         </div>
 
-        <div class="boarditem">
-            <img src="/static/images/board1.jpg" alt="member3">
-            <h2>Angela Sanau Paswa</h2>
-            <p>Angela Sanau Paswa works at Maasai Mara Wildlife Conservancies Association (MMWCA) as the Senior Programmes Officer - Gender and Youth. She is responsible for spearheading technical and programmatic interventions focusing on gender equity across conservancies in the Greater Maasai Mara.</p>
-            <a id="read-more-link-3" class="read-more-link" onclick="toggleReadMore(3)">Read More</a>
-            <div id="read-more-content-3" class="read-more-content">
-                <p>Angela holds a Bachelor’s degree in Political Science and Anthropology. Her passion is driven by strengthening women empowerment, working with communities to enhance internal governance structures, and promoting inclusive spaces. She is part of the Climate Justice Resilience Fund and an IVLP fellow alumna.</p>
-            </div>
-        </div>
 
         <div class="boarditem">
             <img src="/static/images/blam.jpg" alt="member3">
