error fixed and added lilly

--- a/templates/index.html
+++ b/templates/index.html
@@ -319,6 +319,7 @@ nav ul li a.donate-link {
 .impact-item p {
     color: #555;
     font-size: 16px;
+    width: 90%;
 }
 
 #impact h2{
@@ -902,6 +903,40 @@ nav ul li a.donate-link {
             </div>
         </div>
 
+        <div class="boarditem">
+            <img src="/static/images/lilly.jpg" alt="member3">
+            <h2>LILLY BEKELE-PIPER,ED.M.</h2>
+            <p>Lilly is the Founder, Executive Producer and Host of
+                Selam & Hello and Host of EdTech Mondays Kenya
+                on NTV. With over 25 years of experience in
+                international development, education, and strategic
+                communication, Lilly Bekele-Piper brings a wealth
+                of expertise to her work at the intersection of
+                human rights and creative arts. Her impressive and
+                award-winning career spans roles with esteemed
+                institutions such as Harvard University, the United
+                Nations, the World Bank, and USAID. Notably, Lilly
+                played a key role in the successful launch of
+                Disney/National Geographic's pioneering nature
+               focused children's TV show in Africa, "Team Sayari,"
+                now broadcast in 51 African countries and on
+                YouTube.</p>
+            <a id="read-more-link-5" class="read-more-link" onclick="toggleReadMore(5)">Read More</a>
+            <div id="read-more-content-5" class="read-more-content">
+                <p>A sought-after speaker and guest, Lilly's influence
+                    extends across global radio, TV, and digital
+                    platforms. Holding a BA in Speech Communications
+                    from Wake Forest University and a Masters in
+                    Higher Education from Harvard University, Lilly
+                    combines her academic background with a deep
+                    passion for positive change. Lilly received the 2022
+                    USAID Meritorious Honor Award, the 2023 USAID
+                    Private Sector Engagement Excellence Award, and
+                    six USAID commendations for various contributions
+                    during her tenure.
+                    </p>
+            </div>
+        </div>
         <div class="boarditem">
             <img src="/static/images/board5.jpg" alt="member3">
             <h2>Kuresha Bille</h2>
