--- a/templates/index.html
+++ b/templates/index.html
@@ -886,7 +886,7 @@ nav ul li a.donate-link {
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/MszhlIhVZ-U?si=H3WoF0Z3-AfifcEK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
                 <div class="col-md-6">
-                    <h2>Our Founder - USIP Women Building Peace Award 2021 Winner</h2>
+                    <h2>Our Founder - USIP Women Building Peace Award 2021</h2>
                     <!-- Add an iframe to embed the second video -->
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/p1qZUyTanC0?si=cB446G7e2Dg3KW_y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
@@ -895,7 +895,7 @@ nav ul li a.donate-link {
     </section>
 
     <section id="board">
-        <h3>Our Board</h3>
+        <h3 style="text-align: center; margin-left: 100px;">Our Board</h3>
         <div class="container">
 
         <div class="boarditem">
@@ -983,7 +983,7 @@ nav ul li a.donate-link {
         <div class="container-row">
             <div class="row">
                 <div class="col-md-12">
-                    <h2>Donate to Us</h2>
+                    <h2 style="color: brown;">Donate to Us</h2>
                     <!-- Add Paystack script -->
                     <script src="https://js.paystack.co/v1/inline.js"></script>
                     <form action="/store_data" method="post">
@@ -1011,7 +1011,7 @@ nav ul li a.donate-link {
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2>Subscribe to Our Newsletter</h2>
+                    <h2 style="color: brown;">Subscribe to Our Newsletter</h2>
                     <form action="/subscribe" method="post">
                         <label for="subscribe-email">Email Address:</label>
                         <input type="email" id="subscribe-email" name="subscribe-email" required>
@@ -1028,7 +1028,7 @@ nav ul li a.donate-link {
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2>Comments</h2>
+                    <h2 style="color: brown;">Comments</h2>
                     <form action="/post_comment" method="post">
                         <label for="name">Your Name:</label>
                         <input type="text" id="name" name="name" required>
@@ -1050,7 +1050,7 @@ nav ul li a.donate-link {
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2>Contact Information</h2>
+                    <h2 style="color: brown;">Contact Information</h2>
                     <p>Email: <a href="mailto:info@thequeenofpeace.org">info@thequeenofpeace.org</a></p>
                     <p>Tel: 0701444161</p>
                     <p>Alt.Email: <a href="mailto:queenofpeace.organization@gmail.com">queenofpeace.organization@gmail.com</a></p>
