--- a/templates/index.html
+++ b/templates/index.html
@@ -619,16 +619,35 @@ nav ul li a.donate-link {
 
     /* Navbar styles */
     nav ul {
-        text-align: center;
+        display: none;
+        flex-direction: column;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        background-color: #f3f3f3;
     }
 
     nav ul li {
-        margin: 5px 0;
+        margin: 0;
+        text-align: center;
     }
 
     nav ul li a {
-        font-size: 14px;
+        display: block;
+        padding: 10px;
     }
+
+    .toggle-menu {
+        display: block;
+        cursor: pointer;
+    }
+
+    #toggle-menu:checked + ul {
+        display: flex;
+    }
+
+
 
     /* Logo styles */
     #logo {
